<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    tools:context=".SetTransmitterTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/set_transmitter_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="6">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_crop_original_black_24dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/lb_select_type"
                android:textColor="@color/colortext"
                android:textSize="@dimen/message"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/lb_fixed_pulsed_rate"
                android:textColor="@color/colortext"
                android:textSize="@dimen/message"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/lb_pattern_matching"
                android:textColor="@color/colortext"
                android:textSize="@dimen/message"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/lb_pulses_per_scan_time"
                android:textColor="@color/colortext"
                android:textSize="@dimen/message"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginStart="4dp"
                android:text="@string/lb_variable_pulse_rate"
                android:textColor="@color/colortext"
                android:textSize="@dimen/message"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/lb_temperature"
                android:textColor="@color/colortext"
                android:textSize="@dimen/message"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/lb_period"
                android:textColor="@color/colortext"
                android:textSize="@dimen/message"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/lb_altitude"
                android:textColor="@color/colortext"
                android:textSize="@dimen/message"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/lb_depth"
                android:textColor="@color/colortext"
                android:textSize="@dimen/message"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/connecting_device_setTransmitterType"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorbackground"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:padding="14dp"
                android:elevation="4dp"
                android:background="@color/colortextbutton">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="6">

                    <TextView
                        android:id="@+id/device_name_setTransmitterType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colortext"
                        android:textSize="@dimen/text_button"/>

                    <TextView
                        android:id="@+id/device_address_setTransmitterType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colortext"
                        android:textSize="12dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_battery_full"/>

                    <TextView
                        android:id="@+id/percent_battery_setTransmitterType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="%75"
                        android:textSize="@dimen/text_size_caption"
                        android:textColor="@color/colortext"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/state_view"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/colorbutton"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>